--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,15 @@ a {
   color: #fff;
 }
 
+.app__no-drag {
+  user-drag: none; 
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
 [show-profile] {
   cursor: pointer;
 }
