--- a/public/app/components/templates/button-sound.html
+++ b/public/app/components/templates/button-sound.html
@@ -1,5 +1,6 @@
 <button class="app-button__sound mdl-button mdl-js-button mdl-button--fab mdl-button--colored mdl-js-ripple-effect mdl-color--accent"
-        ng-click="change()">
+        ng-click="change()"
+        ng-hide="hideSound">
     <span class="mdl-button__ripple-container">
     <i class="material-icons">{{ sound ? 'volume_up' : 'volume_off'}}</i>
 </button>
